--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,7 @@ jobs:
       - run: # run tests
           name: Run Test and Coverage
           command: |
-            yarn test -- --coverage
+            yarn test --coverage
       - deploy:
           name: "deploy develop to beta"
           command: |
