Add user profile dropdown.

--- a/.eslintrc
+++ b/.eslintrc
@@ -33,6 +33,7 @@
       "no-shadow": "off",
 
       "jsx-a11y/click-events-have-key-events": "off",
+      "jsx-a11y/no-noninteractive-tabindex": "off",
       "jsx-a11y/no-static-element-interactions": "off",
 
       "import/no-named-default": "off",
