--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-router-redux": "5.0.0-alpha.9",
+    "react-sortable-hoc": "^0.8.3",
     "recompose": "^0.30.0",
     "redux": "^4.0.0",
     "redux-form": "^7.4.2",
