--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react": "^16.5.2",
     "react-app-polyfill": "^0.1.3",
     "react-click-outside": "^3.0.1",
+    "react-color": "^2.14.1",
     "react-dev-utils": "^6.0.4",
     "react-dom": "^16.5.2",
     "react-portal": "^4.1.5",
