--- a/.eslintrc
+++ b/.eslintrc
@@ -34,6 +34,7 @@
 
       "jsx-a11y/click-events-have-key-events": "off",
       "jsx-a11y/label-has-for": "off",
+      "jsx-a11y/no-autofocus": "off",
       "jsx-a11y/no-noninteractive-tabindex": "off",
       "jsx-a11y/no-static-element-interactions": "off",
 
