--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "4.4.0-beta.6",
     "react-router-redux": "5.0.0-alpha.9",
+    "react-slick": "^0.23.2",
     "react-sortable-hoc": "^0.8.3",
     "recompose": "^0.30.0",
     "redux": "^4.0.0",
