Add Oops component.

--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-dom": "^16.5.2",
     "react-portal": "^4.1.5",
     "react-redux": "^5.0.7",
+    "react-responsive": "^6.1.1",
     "react-router-dom": "4.4.0-beta.6",
     "react-router-redux": "5.0.0-alpha.9",
     "react-slick": "^0.23.2",
