Feature: more features...

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,17 @@
 {
-  "requirePragma": true,
+  "printWidth": 100,
   "singleQuote": true,
-  "trailingComma": "all"
+  "tabWidth": 2,
+  "trailingComma": "all",
+  "useTabs": false,
+  "overrides": [
+    {
+      "files": "*.scss",
+      "options": {
+        "singleQuote": false,
+        "tabWidth": 2,
+        "useTabs": false
+      }
+    }
+  ]
 }
