--- a/.editorconfig
+++ b/.editorconfig
@@ -7,7 +7,16 @@ charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 end_of_line = lf
-max_line_length = 120
+max_line_length = 100
+
+[*.scss]
+indent_style = space
+indent_size = 2
+charset = utf-8
+trim_trailing_whitespace = true
+insert_final_newline = true
+end_of_line = lf
+max_line_length = 100
 
 [{package.json}]
 indent_style = space
