--- a/.eslintrc
+++ b/.eslintrc
@@ -18,7 +18,13 @@
   },
   "plugins": ["jsx-a11y", "prettier", "react"],
   "rules": {
-    "indent": [1, 2],
+    "indent": [
+      1,
+      2,
+      {
+        "SwitchCase": 1
+      }
+    ],
 
     "no-bitwise": "off",
     "no-nested-ternary": "off",
@@ -38,12 +44,12 @@
 
     "react/display-name": "off",
     "react/jsx-closing-bracket-location": [1],
-    "react/jsx-curly-spacing": ["error", "always"],
     "react/jsx-filename-extension": [2, { "extensions": [".js", ".jsx"] }],
     "react/jsx-first-prop-new-line": [1, "multiline"],
     "react/jsx-indent": [1, 2, { "checkAttributes": false }],
+    "react/jsx-indent-props": [1, 2],
     "react/jsx-max-props-per-line": [1, { "maximum": 2, "when": "always" }],
-    "react/jsx-one-expression-per-line": [2, { "allow": "none" }],
+    "react/jsx-one-expression-per-line": [1, { "allow": "literal" }],
     "react/jsx-sort-props": [1],
     "react/no-array-index-key": "off",
     "react/no-danger": "off",
