--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "react-portal": "^4.1.5",
     "react-redux": "^5.0.7",
     "react-responsive": "^6.1.1",
-    "react-router-dom": "4.4.0-beta.6",
+    "react-router-dom": "^5.0.0",
     "react-router-redux": "5.0.0-alpha.9",
     "react-slick": "^0.23.2",
     "react-sortable-hoc": "^0.8.3",
