--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "style-loader": "0.23.0",
     "terser-webpack-plugin": "1.1.0",
     "tinycolor2": "^1.4.1",
+    "unsplash-js": "^5.0.0",
     "url": "^0.11.0",
     "url-join": "^4.0.0",
     "url-loader": "1.1.1",
