--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -10,6 +10,7 @@
     ],
     "indentation": 2,
     "no-descending-specificity": null,
+    "number-leading-zero": "never",
     "string-quotes": "single",
     "prettier/prettier": [
       true,
