--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
+    "flow": "flow",
     "lint": "eslint src/**/*.js",
     "test": "node scripts/test.js",
     "precommit": "pretty-quick --staged"
