--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-color": "^2.14.1",
     "react-dev-utils": "^6.0.4",
     "react-dom": "^16.5.2",
+    "react-helmet": "^5.2.1",
     "react-portal": "^4.1.5",
     "react-redux": "^5.0.7",
     "react-responsive": "^6.1.1",
