--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "postcss-safe-parser": "4.0.1",
     "react": "^16.5.2",
     "react-addons-css-transition-group": "^15.6.2",
+    "react-animated-number": "^0.4.4",
     "react-app-polyfill": "^0.1.3",
     "react-click-outside": "^3.0.1",
     "react-color": "^2.14.1",
