--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-router-redux": "5.0.0-alpha.9",
     "react-slick": "^0.23.2",
     "react-sortable-hoc": "^0.8.3",
+    "react-swipeable": "^5.3.0",
     "react-transition-group": "^2.5.3",
     "recompose": "^0.30.0",
     "redux": "^4.0.0",
