--- a/.eslintrc
+++ b/.eslintrc
@@ -53,12 +53,21 @@
 
     "react/display-name": "off",
     "react/jsx-closing-bracket-location": [1],
-    "react/jsx-filename-extension": [2, { "extensions": [".js", ".jsx"] }],
+    "react/jsx-filename-extension": [2, {
+      "extensions": [".js", ".jsx"]
+    }],
     "react/jsx-first-prop-new-line": [1, "multiline"],
-    "react/jsx-indent": [2, 2, { "checkAttributes": false }],
+    "react/jsx-indent": [2, 2, {
+      "checkAttributes": false
+    }],
     "react/jsx-indent-props": [1, 2],
-    "react/jsx-max-props-per-line": [1, { "maximum": 2, "when": "always" }],
-    "react/jsx-one-expression-per-line": [1, { "allow": "single-child" }],
+    "react/jsx-max-props-per-line": [1, {
+      "maximum": 3,
+      "when": "always"
+    }],
+    "react/jsx-one-expression-per-line": [1, {
+      "allow": "single-child"
+    }],
     "react/jsx-sort-props": [1],
     "react/no-array-index-key": "off",
     "react/no-danger": "off",
