--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
     "global": "^4.3.2",
     "history": "^4.7.2",
     "html-webpack-plugin": "4.0.0-alpha.2",
+    "husky": "^4.2.5",
     "identity-obj-proxy": "3.0.0",
     "image-compressor.js": "^1.1.4",
     "jest": "23.6.0",
     "jest-pnp-resolver": "1.0.1",
     "jest-resolve": "23.6.0",
+    "lint-staged": "^10.2.9",
     "mini-css-extract-plugin": "0.4.3",
     "moment": "^2.23.0",
     "node-sass": "^4.9.3",
